# cli-rs

./: Cargo.toml  README.md  flake.nix
src/: cli.rs  config.rs  debug.rs  default_config.toml  hms.rs  main.rs  power.rs  repl.rs
src/admin/: debug.rs  export.rs  mod.rs
src/hms/: crud.rs  errors.rs  listing.rs  mod.rs  repl.rs  run.rs  workspace.rs
src/power/: draw.rs  errors.rs  mod.rs  power.rs  switch.rs
