[package]
name = "smarthome-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
rustyline = "10.0.0"
rustyline-derive = "0.7.0"
tokio = { version = "1.21.2", features = ["full"] }
serde = "1.0.147"
toml = "0.5.9"
log = "0.4.17"
reqwest = { version = "0.11.12", default-features = false }
tabled = { version = "0.10.0", features = ["color", "derive"] }
loggerv = "0.7.2"
smarthome-sdk-rs = "0.7.1"
