[package]
name = "smarthome-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
rustyline = "11.0.0"
rustyline-derive = "0.8.0"
tokio = { version = "1.26.0", features = ["full"] }
serde = "1.0.154"
toml = "0.7.2"
log = "0.4.17"
reqwest = { version = "0.11.14", default-features = false }
tabled = { version = "0.10.0", features = ["color", "derive"] }
loggerv = "0.7.2"
smarthome-sdk-rs = {path = "../sdk-rs"}
chrono = "0.4.23"
