[package]
name = "smarthome-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
rustyline = "11.0.0"
rustyline-derive = "0.8.0"
tokio = { version = "1.28.1", features = ["full"] }
serde = "1.0.163"
toml = "0.7.4"
log = "0.4.17"
reqwest = { version = "0.11.18", default-features = false }
tabled = { version = "0.12.0", features = ["color", "derive"] }
loggerv = "0.7.2"
smarthome-sdk-rs = {path = "../sdk-rs"}
chrono = "0.4.24"
anyhow = "1.0.71"
